# bible

./: .gitignore  Cargo.toml  DEPLOY.md  README.md  VERSE_LINKS.md  build.sh  convert_all_bibles.sh  convert_kjv.py  create_social_images.md  design.md  download_bibles.sh  manifest.json  requirements.md  tasks.md
.github/workflows/: ci.yml
bible/asv/Acts/: 1.html  10.html  (+9 more)
datasets/: README.md  bsb.txt  kjv.txt  web.txt
logs/: build-20251103-223823.jsonl  build-20251104-145741.jsonl  build-20251104-145859.jsonl  build-20251104-145914.jsonl  build-20251105-183740.jsonl  build-20251105-200005.jsonl  build-20251105-200309.jsonl  build-20251105-203411.jsonl  build-20251105-203750.jsonl  build-20251105-214448.jsonl  build-20251105-214926.jsonl  build-20251105-214945.jsonl  build-20251105-215313.jsonl  build-20251105-215647.jsonl  build-20251105-220912.jsonl  build-20251105-221412.jsonl
schema/: chapter-1.0.json  crossrefs-1.0.json  manifest-1.0.json
scripts/: build.sh  convert_all_bibles.sh  convert_bsb.sh  convert_kjv_json_to_html.py  convert_to_kjv_format.py  convert_usfm_to_kjv_format.py  create_favicon.py  deploy-manual.sh  download_all_bibles.sh  download_bibles.sh  download_kaggle_dataset.sh  fix_incomplete_verses.py
src/: cli.rs  html_generator.rs  json_generator.rs  logger.rs  main.rs  manifest_generator.rs  mapper.rs  mapper_config.rs  mapper_tests.rs  models.rs  parser.rs  pipeline.rs  schema.rs  security_tests.rs  site_generator.rs  text_normalizer.rs  validation.rs  validator.rs
static/: styles.css  verses.js
templates/: chapter.html  redirect.html
(+1500 files in other folders)
