[package]
name = "bible-static-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1"
walkdir = "2"
flate2 = "1"
sha2 = { version = "0.10", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
jsonschema = "0.17"
schemars = "0.8"
regex = "1"
anyhow = "1"
strsim = "0.11"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
proptest = "1"
